--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.SuppleClock" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.SuppleClock" parent="Theme.AppCompat.DayNight">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/item_main</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -17,6 +17,8 @@
     <style name="TimePickerStyle" parent="@style/Widget.MaterialComponents.TimePicker">
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:colorControlNormal">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+
     </style>
 
     <style name="Linear_Divider">
