--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_alarm_list">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="ru.alekseyruban.suppleclock.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/navigation_alarm_list"
+        android:name="ru.alekseyruban.suppleclock.ui.alarms_list.AlarmsListFragment"
+        android:label="@string/alarm_clocks"
+        tools:layout="@layout/fragment_alarms_list" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="ru.alekseyruban.suppleclock.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_calendar"
+        android:name="ru.alekseyruban.suppleclock.ui.calendar.CalendarFragment"
+        android:label="@string/calendar"
+        tools:layout="@layout/fragment_calendar" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="ru.alekseyruban.suppleclock.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_achievements"
+        android:name="ru.alekseyruban.suppleclock.ui.achievements.AchievementsFragment"
+        android:label="@string/achievements"
+        tools:layout="@layout/fragment_achievements" />
 </navigation>
