--- a/app/src/main/res/layout/fragment_alarm_details.xml
+++ b/app/src/main/res/layout/fragment_alarm_details.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".AlarmDetails"
+    tools:context=".ui.alarm_details.AlarmDetails"
     android:background="@null">
 
     <LinearLayout
@@ -77,7 +77,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginHorizontal="7dp"
-                android:text="1 раз"
+                android:text="@string/_1_time"
                 android:textSize="14sp"
                 android:textColor="@color/white"/>
 
