--- a/app/src/main/res/layout/fragment_alarm_ringing.xml
+++ b/app/src/main/res/layout/fragment_alarm_ringing.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".AlarmRingingFragment"
+    tools:context=".ui.alarm_ringing.AlarmRingingFragment"
     android:background="@color/background">
 
     <Button style="?android:attr/borderlessButtonStyle"
