--- a/app/src/main/res/layout/fragment_shaking_solving.xml
+++ b/app/src/main/res/layout/fragment_shaking_solving.xml
@@ -4,7 +4,7 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 xmlns:app="http://schemas.android.com/apk/res-auto"
-tools:context=".ShakingSolvingFragment"
+tools:context=".ui.shaking_solving.ShakingSolvingFragment"
 android:background="@color/background">
 
 <Button style="?android:attr/borderlessButtonStyle"
