--- a/app/src/main/res/layout/fragment_typing_solving.xml
+++ b/app/src/main/res/layout/fragment_typing_solving.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".TypingSolvingFragment"
+    tools:context=".ui.typing_solving.TypingSolvingFragment"
     android:background="@color/background">
 
     <Button style="?android:attr/borderlessButtonStyle"
