--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.SuppleClock" parent="Theme.AppCompat.DayNight">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/item_main</item>
+        <item name="colorPrimary">@color/background</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -10,7 +10,7 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/background</item>
         <!-- Customize your theme here. -->
     </style>
 
@@ -26,5 +26,9 @@
         <item name="android:layout_height">1px</item>
         <item name="android:background">@color/navigation_main</item>
         <item name="android:layout_marginStart">18dp</item>
+    </style>
+
+    <style name="generalnotitle">
+        <item name="android:windowNoTitle">true</item>
     </style>
 </resources>
