--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_navigation_alarm_list_to_simpleClockFragment"
             app:destination="@id/simpleClockFragment" />
+        <action
+            android:id="@+id/action_navigation_alarm_list_to_scheduleClockFragment"
+            app:destination="@id/scheduleClockFragment" />
     </fragment>
 
     <fragment
@@ -69,4 +72,18 @@
         android:name="ru.alekseyruban.suppleclock.ui.shaking_solving.ShakingSolvingFragment"
         android:label="fragment_shaking_solving"
         tools:layout="@layout/fragment_shaking_solving" />
+    <fragment
+        android:id="@+id/scheduleClockFragment"
+        android:name="ru.alekseyruban.suppleclock.ui.schedule_clock.ScheduleClockFragment"
+        android:label="fragment_schedule_clock"
+        tools:layout="@layout/fragment_schedule_clock" >
+        <action
+            android:id="@+id/action_scheduleClockFragment_to_scheduledClockDetailsFragment"
+            app:destination="@id/scheduledClockDetailsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/scheduledClockDetailsFragment"
+        android:name="ru.alekseyruban.suppleclock.ui.schedule_clock.ScheduledClockDetailsFragment"
+        android:label="fragment_scheduled_clock_details"
+        tools:layout="@layout/fragment_scheduled_clock_details" />
 </navigation>
