--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,7 +18,12 @@
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:colorControlNormal">@color/white</item>
         <item name="android:textColor">@color/white</item>
+    </style>
 
+    <style name="TimePickerDetailsStyle" parent="@style/Widget.MaterialComponents.TimePicker">
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:colorControlNormal">@color/white</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="Linear_Divider">
