--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="recycle_view_spacing_14dp">14dp</dimen>
+    <dimen name="recycle_view_spacing_8dp">8dp</dimen>
     <dimen name="spacing_20dp">20dp</dimen>
 </resources>
