--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -36,4 +36,13 @@
     <style name="generalnotitle">
         <item name="android:windowNoTitle">true</item>
     </style>
+
+    <style name="AlertDialogCustom" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:background">@color/background</item>
+        <item name="android:colorAccent">@color/background</item>
+
+        <item name="android:textColorAlertDialogListItem">@color/white</item>
+    </style>
 </resources>
