--- a/app/src/main/res/layout/fragment_alarm_details.xml
+++ b/app/src/main/res/layout/fragment_alarm_details.xml
@@ -170,6 +170,7 @@
         android:layout_width="match_parent"
         android:layout_height="47dp"
         android:layout_marginTop="14dp"
+        android:visibility="gone"
         android:background="@drawable/item_radius18">
 
         <TextView
