--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -98,6 +98,7 @@
                 android:textColor="@color/navigation_main"
                 android:textSize="14sp"
                 android:layout_marginEnd="18dp"
+                android:enabled="true"
                 tools:ignore="RtlHardcoded" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -131,6 +132,7 @@
                 android:textColor="@color/navigation_main"
                 android:textSize="14sp"
                 android:layout_marginEnd="18dp"
+                android:enabled="true"
                 tools:ignore="RtlHardcoded" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -170,6 +172,7 @@
             android:textColor="@color/navigation_main"
             android:textSize="14sp"
             android:layout_marginEnd="18dp"
+            android:enabled="true"
             tools:ignore="RtlHardcoded" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -220,6 +223,7 @@
             android:textColor="@color/navigation_main"
             android:textSize="14sp"
             android:layout_marginEnd="18dp"
+            android:enabled="true"
             tools:ignore="RtlHardcoded" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
