--- a/app/src/main/res/layout/fragment_simple_clock.xml
+++ b/app/src/main/res/layout/fragment_simple_clock.xml
@@ -166,6 +166,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginHorizontal="4dp"
+            android:visibility="gone"
             android:orientation="horizontal">
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/circle_red"
