--- a/app/src/main/res/layout/fragment_typing_solving.xml
+++ b/app/src/main/res/layout/fragment_typing_solving.xml
@@ -50,6 +50,7 @@
         android:layout_marginTop="26dp"
         android:background="@drawable/item_radius18"
         android:hint="@string/type_words"
+        android:inputType="textCapSentences"
         android:textSize="16sp"
         android:textColor="@color/white"
         android:textColorHint="@color/text_disabled"
